chore: fix deps versions

--- a/mise.toml
+++ b/mise.toml
@@ -1,9 +1,9 @@
 [tools]
-go = "latest"
-goreleaser = "latest"
-cosign = "latest"
-golangci-lint = "latest"
-lefthook = "latest"
+go = "1.26.0"
+goreleaser = "2.13.3"
+cosign = "3.0.4"
+golangci-lint = "2.8.0"
+lefthook = "2.0.4"
 
 [tasks.build]
 run = "goreleaser build --single-target --snapshot --output cc-flavors --clean"
