chore: rename takymt, go mod tidy

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,11 @@ jobs:
         with:
           go-version-file: go.mod
 
+      - name: Go mod tidy check
+        run: |
+          go mod tidy
+          git diff --exit-code
+
       - name: Format
         run: |
           test -z "$(gofmt -l .)"
