--- a/renovate.json
+++ b/renovate.json
@@ -1,30 +1,27 @@
 {
-  "extends": [
-    "config:recommended"
-  ],
+  "extends": ["config:recommended"],
   "automergeType": "pr",
   "platformAutomerge": true,
   "packageRules": [
     {
-      "matchUpdateTypes": [
-        "patch"
-      ],
+      "matchPackageNames": ["go"],
+      "matchManagers": ["gomod", "mise"],
+      "groupName": "go toolchain"
+    },
+    {
+      "matchUpdateTypes": ["patch"],
+      "excludePackageNames": ["go"],
       "automerge": true
     },
     {
-      "matchUpdateTypes": [
-        "minor"
-      ],
+      "matchUpdateTypes": ["minor"],
+      "excludePackageNames": ["go"],
       "groupName": "minor updates",
-      "schedule": [
-        "before 6am on monday"
-      ],
+      "schedule": ["before 6am on monday"],
       "automerge": true
     },
     {
-      "matchUpdateTypes": [
-        "major"
-      ],
+      "matchUpdateTypes": ["major"],
       "automerge": false
     }
   ]
